@@ -50,11 +50,12 @@ public class BookService {
             childIdList.add(childId);
             try {
                 BufferedImage barcodeImage = uploadService.generateBarcodeImage(childId);
-                com.google.api.services.drive.model.File uploadedFile = uploadService.uploadBarcodeToDrive(barcodeImage, tenSach + "_" + childId);
+                com.google.api.services.drive.model.File uploadedFile = uploadService.uploadBarcodeToDrive(barcodeImage,
+                        tenSach + "_" + childId);
                 barcodeLinks.add(uploadedFile.getWebViewLink());
             } catch (Exception e) {
                 e.printStackTrace();
-            }            
+            }
         }
         return savedBook;
     }
@@ -99,42 +100,42 @@ public class BookService {
     }
 
     public List<Map<String, Object>> layTop5Book() {
-    Pageable pageable = PageRequest.of(0, 5); // trang 0, lấy 5 sách
-    List<Book> books = bookRepo.findAll(pageable).getContent();
+        Pageable pageable = PageRequest.of(0, 5); // trang 0, lấy 5 sách
+        List<Book> books = bookRepo.findAll(pageable).getContent();
 
-    List<Map<String, Object>> resultList = new ArrayList<>();
-    for (Book book : books) {
-        Category cate = categoryRepo.findById(book.getTheLoai()).orElse(null);
+        List<Map<String, Object>> resultList = new ArrayList<>();
+        for (Book book : books) {
+            Category cate = categoryRepo.findById(book.getTheLoai()).orElse(null);
 
-        Map<String, Object> resultMap = new HashMap<>();
-        resultMap.put("id", book.getId());
-        resultMap.put("tenSach", book.getTenSach());
-        resultMap.put("moTa", book.getMoTa());
-        resultMap.put("hinhAnh", book.getHinhAnh());
-        resultMap.put("theLoai", book.getTheLoai());
-        resultMap.put("tenTacGia", book.getTenTacGia());
-        resultMap.put("nxb", book.getNxb());
-        resultMap.put("nam", book.getNam());
-        resultMap.put("tongSoLuong", book.getTongSoLuong());
-        resultMap.put("soLuongMuon", book.getSoLuongMuon());
-        resultMap.put("soLuongXoa", book.getSoLuongXoa());
-        resultMap.put("trangThai", book.getTrangThai());
+            Map<String, Object> resultMap = new HashMap<>();
+            resultMap.put("id", book.getId());
+            resultMap.put("tenSach", book.getTenSach());
+            resultMap.put("moTa", book.getMoTa());
+            resultMap.put("hinhAnh", book.getHinhAnh());
+            resultMap.put("theLoai", book.getTheLoai());
+            resultMap.put("tenTacGia", book.getTenTacGia());
+            resultMap.put("nxb", book.getNxb());
+            resultMap.put("nam", book.getNam());
+            resultMap.put("tongSoLuong", book.getTongSoLuong());
+            resultMap.put("soLuongMuon", book.getSoLuongMuon());
+            resultMap.put("soLuongXoa", book.getSoLuongXoa());
+            resultMap.put("trangThai", book.getTrangThai());
 
-        if (cate != null) {
-            resultMap.put("tenTheLoaiCha", cate.getTenTheLoaiCha());
-            resultMap.put("tenTheLoaiCon", cate.getTenTheLoaiCon());
-            resultMap.put("viTri", cate.getViTri());
-        } else {
-            resultMap.put("tenTheLoaiCha", null);
-            resultMap.put("tenTheLoaiCon", null);
-            resultMap.put("viTri", null);
+            if (cate != null) {
+                resultMap.put("tenTheLoaiCha", cate.getTenTheLoaiCha());
+                resultMap.put("tenTheLoaiCon", cate.getTenTheLoaiCon());
+                resultMap.put("viTri", cate.getViTri());
+            } else {
+                resultMap.put("tenTheLoaiCha", null);
+                resultMap.put("tenTheLoaiCon", null);
+                resultMap.put("viTri", null);
+            }
+
+            resultList.add(resultMap);
         }
 
-        resultList.add(resultMap);
+        return resultList;
     }
-
-    return resultList;
-}
 
     public Map<String, Object> layBookTheoId(String id) {
         Book book = bookRepo.findById(id).orElse(null);
@@ -231,52 +232,112 @@ public class BookService {
         return books;
     }
 
-    public List<Book> getSuggestions(String userId, List<String> keywords) {
-        // 1. Lấy 5 phiếu mượn gần nhất của user
+    // public List<Book> getSuggestions(String userId, List<String> keywords) {
+    // // 1. Lấy 5 phiếu mượn gần nhất của user
+    // List<BorrowCard> recentBorrows =
+    // borrowCardRepo.findTop5ByUserIdOrderByBorrowDateDesc(userId);
+
+    // // 2. Lấy tất cả bookIds đã mượn trong 5 phiếu mượn (id kiểu String)
+    // List<String> allBorrowedBookIds = recentBorrows.stream()
+    // .map(BorrowCard::getBookIds) // List<String>
+    // .flatMap(Collection::stream)
+    // .distinct()
+    // .collect(Collectors.toList());
+
+    // if (allBorrowedBookIds.isEmpty()) {
+    // // Nếu chưa mượn sách nào, chỉ lọc theo keywords
+    // return bookRepo.findAll().stream()
+    // .filter(book -> keywords.stream()
+    // .anyMatch(kw -> book.getTenSach().toLowerCase().contains(kw.toLowerCase()) ||
+    // book.getTenTacGia().toLowerCase().contains(kw.toLowerCase())))
+    // .limit(10)
+    // .collect(Collectors.toList());
+    // }
+
+    // // 3. Lấy thông tin sách đã mượn
+    // List<Book> borrowedBooks = bookRepo.findAllById(allBorrowedBookIds);
+
+    // // 4. Tạo set id sách đã mượn để loại ra
+    // Set<String> borrowedBookIdSet = borrowedBooks.stream()
+    // .map(Book::getId)
+    // .collect(Collectors.toSet());
+
+    // // 5. Lấy danh sách tác giả của sách đã mượn, gộp với keywords
+    // List<String> authors = borrowedBooks.stream()
+    // .map(Book::getTenTacGia)
+    // .distinct()
+    // .collect(Collectors.toList());
+
+    // List<String> allKeywords = new ArrayList<>(keywords);
+    // allKeywords.addAll(authors);
+
+    // System.out.println("All Keywords: " + allKeywords);
+    // System.out.println("Borrowed Book IDs: " + borrowedBookIdSet);
+    // // System.out.println("All Books count: " + allBooks.size());
+
+    // // 6. Lọc sách chưa mượn, tên hoặc tác giả chứa keyword, trả về tối đa 10
+    // quyển
+    // return bookRepo.findAll().stream()
+    // .filter(book -> !borrowedBookIdSet.contains(book.getId()))
+    // .filter(book -> allKeywords.stream()
+    // .anyMatch(kw -> book.getTenSach().toLowerCase().contains(kw.toLowerCase()) ||
+    // book.getTenTacGia().toLowerCase().contains(kw.toLowerCase()) ||
+    // book.getTheLoai().toLowerCase().contains(kw.toLowerCase()) ||
+    // book.getMoTa().toLowerCase().contains(kw.toLowerCase())))
+    // .limit(10)
+    // .collect(Collectors.toList());
+    // }
+
+    // Gợi ý theo phiếu mượn (nếu có userId)
+    public List<Book> getPersonalizedSuggestions(String userId, List<String> keywords) {
+        // 1. Lấy 5 phiếu mượn gần nhất
         List<BorrowCard> recentBorrows = borrowCardRepo.findTop5ByUserIdOrderByBorrowDateDesc(userId);
 
-        // 2. Lấy tất cả bookIds đã mượn trong 5 phiếu mượn (id kiểu String)
-        List<String> allBorrowedBookIds = recentBorrows.stream()
-                .map(BorrowCard::getBookIds) // List<String>
+        // 2. Lấy tất cả bookIds từ phiếu mượn
+        List<String> borrowedBookIds = recentBorrows.stream()
+                .map(BorrowCard::getBookIds)
                 .flatMap(Collection::stream)
                 .distinct()
                 .collect(Collectors.toList());
 
-        if (allBorrowedBookIds.isEmpty()) {
-            // Nếu chưa mượn sách nào, chỉ lọc theo keywords
-            return bookRepo.findAll().stream()
-                    .filter(book -> keywords.stream()
-                            .anyMatch(kw -> book.getTenSach().toLowerCase().contains(kw.toLowerCase()) ||
-                                    book.getTenTacGia().toLowerCase().contains(kw.toLowerCase())))
-                    .limit(10)
-                    .collect(Collectors.toList());
+        if (borrowedBookIds.isEmpty()) {
+            // Nếu user chưa mượn sách nào, fallback sang gợi ý thường
+            return getGeneralSuggestions(keywords);
         }
 
         // 3. Lấy thông tin sách đã mượn
-        List<Book> borrowedBooks = bookRepo.findAllById(allBorrowedBookIds);
+        List<Book> borrowedBooks = bookRepo.findAllById(borrowedBookIds);
 
-        // 4. Tạo set id sách đã mượn để loại ra
+        // 4. Set id sách đã mượn để lọc
         Set<String> borrowedBookIdSet = borrowedBooks.stream()
                 .map(Book::getId)
                 .collect(Collectors.toSet());
 
-        // 5. Lấy danh sách tác giả của sách đã mượn, gộp với keywords
+        // 5. Gộp từ khóa + tên tác giả của sách đã mượn
         List<String> authors = borrowedBooks.stream()
                 .map(Book::getTenTacGia)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> allKeywords = new ArrayList<>(keywords);
         allKeywords.addAll(authors);
 
-        System.out.println("All Keywords: " + allKeywords);
-        System.out.println("Borrowed Book IDs: " + borrowedBookIdSet);
-        // System.out.println("All Books count: " + allBooks.size());
-
-        // 6. Lọc sách chưa mượn, tên hoặc tác giả chứa keyword, trả về tối đa 10 quyển
+        // 6. Lọc sách chưa mượn, tên/tác giả/thể loại/mô tả chứa keyword
         return bookRepo.findAll().stream()
                 .filter(book -> !borrowedBookIdSet.contains(book.getId()))
                 .filter(book -> allKeywords.stream()
+                        .anyMatch(kw -> book.getTenSach().toLowerCase().contains(kw.toLowerCase()) ||
+                                book.getTenTacGia().toLowerCase().contains(kw.toLowerCase()) ||
+                                book.getTheLoai().toLowerCase().contains(kw.toLowerCase()) ||
+                                book.getMoTa().toLowerCase().contains(kw.toLowerCase())))
+                .limit(10)
+                .collect(Collectors.toList());
+    }
+
+    // Gợi ý không cá nhân hóa (không cần userId)
+    public List<Book> getGeneralSuggestions(List<String> keywords) {
+        return bookRepo.findAll().stream()
+                .filter(book -> keywords.stream()
                         .anyMatch(kw -> book.getTenSach().toLowerCase().contains(kw.toLowerCase()) ||
                                 book.getTenTacGia().toLowerCase().contains(kw.toLowerCase()) ||
                                 book.getTheLoai().toLowerCase().contains(kw.toLowerCase()) ||
